--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: home
 ---
 <div class="user-details">
-<h2> Me and this website </h2>
+<h2> Recent News and Posts</h2>
 <p style="text-align: justify;"> Your description </p>
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
-	<h3> Analytics </h3>
+	<h3> Visiters </h3>
 	{% include clustrmap.html style="js" %}
 	<p> <small> If you are not seeing a map, please disable Ad block </small></p>
 </div>
