--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 layout: home
 ---
 <div class="user-details">
-<h2> Recent News and Posts</h2>
-<p style="text-align: justify;"> Your description </p>
-<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
+<h2> Introduction</h2>
+<p style="text-align: justify;"> 
+	OpenInSLAM is an open-source library that supports rapid SLAM development for indoor environments. 
+	The goal of OpenInSLAM is to provide a developer-friendly frontend that exposes a well-designed set of C++ data structures and algorithms, 
+	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
+
+<h2> Core Features </h2>
+	
+	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
 	{% include clustrmap.html style="js" %}
 	<p> <small> If you are not seeing a map, please disable Ad block </small></p>
 </div>
 </div>
+
 <div class="permlinks">
 <h2>Recent Posts</h2>
 <dl>
