--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@ layout: home
 	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
 
 <h2> Core Features </h2>
+	<ul>
+<li>Points, Line and Planes</li>
+<li>Vanishing Points/Directions</li>
+<li>Manhattan/Atlanta World</li>
+<li>Coupled/Decoupled tracking Algorithms </li>		
+<li>Covisibility and Extensibility Graph </li>
+<li>Optimization algorithms </li>
+<li>Structure and Learning-based Segmentation </li>		
+<li>Scene Reconstruction</li>
+</ul>
 	
 	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
