--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ layout: home
 	The goal of OpenInSLAM is to provide a developer-friendly frontend that exposes a well-designed set of C++ data structures and algorithms, 
 	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
 
-<h2> Core Features </h2>
-	<ul>
+<div class="siteorigin-widget-tinymce textwidget">
+<h3>Core Features</h3>
+<ul>
 <li>Points, Line and Planes</li>
 <li>Vanishing Points/Directions</li>
 <li>Manhattan/Atlanta World</li>
@@ -19,6 +20,16 @@ layout: home
 <li>Structure and Learning-based Segmentation </li>		
 <li>Scene Reconstruction</li>
 </ul>
+</div>
+</div></div></div><div id="pgc-604-1-1"  class="panel-grid-cell" ><div id="panel-604-1-1-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="2" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
+<div class="siteorigin-widget-tinymce textwidget">
+	<h3>Supported compilers</h3>
+<ul>
+<li>GCC 5.X and later on Linux</li>
+</ul>
+</div>
+	
+
 	
 	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
