--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
 	The goal of OpenInSLAM is to provide a developer-friendly frontend that exposes a well-designed set of C++ data structures and algorithms, 
 	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
 
-<div class="siteorigin-widget-tinymce textwidget">
+<div >
 <h3>Core Features</h3>
 <ul>
 <li>Points, Line and Planes</li>
@@ -22,7 +22,7 @@ layout: home
 </ul>
 </div>
 </div></div></div><div id="pgc-604-1-1"  class="panel-grid-cell" ><div id="panel-604-1-1-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="2" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
-<div class="siteorigin-widget-tinymce textwidget">
+<div>
 	<h3>Supported compilers</h3>
 <ul>
 <li>GCC 5.X and later on Linux</li>
