--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@ layout: home
 <li>GCC 5.X and later on Linux</li>
 </ul>
 
-	
 
+<h2> Publised Systems From the Community </h2>
+<p style="text-align: justify;"> 
+	Based on these excellent works, we modified some engineering parts to test in different environments. </p>
+       <h3>VINS-RGBD </h3> 
+	<div style = "border: border-radius: 1px;">
+	<h3> Intro: </h3>
+	<h3> New function: </h3>
+        <p> You could find the code <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
+	</div>  
+	
 	
 	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
