--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@ layout: home
 <li>GCC 5.X and later on Linux</li>
 </ul>
 
-
 <h2> Publised Systems From the Community </h2>
 <p style="text-align: justify;"> 
 	Based on these excellent works, we modified some engineering parts to test in different environments. </p>
-       <h3>VINS-RGBD </h3> 
+       <h3 align="left">VINS-RGBD </h3> 
 	<div style = "border: border-radius: 1px;">
-	<h3> Intro: </h3>
-	<h3> New function: </h3>
-        <p> You could find the code <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
+	<h3 align="left"> Intro: </h3>
+	<h3 align="left"> New function: </h3>
+        <p> New interface and configs for testing the RGB-IMU system on  OpenLoris Datasets, the code is available here. <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
 	</div>  
 	
 	
