--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: home
 	The goal of OpenInSLAM is to provide a developer-friendly frontend that exposes a well-designed set of C++ data structures and algorithms, 
 	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
 
-
+<div class="user-details">
 <h3>Core Features</h3>
-<ul>
+<ul align="left">
 <li>Points, Line and Planes</li>
 <li>Vanishing Points/Directions</li>
 <li>Manhattan/Atlanta World</li>
@@ -24,6 +24,7 @@ layout: home
 <ul>
 <li>GCC 5.X and later on Linux</li>
 </ul>
+</div>	
 
 <h2> Publised Systems From the Community </h2>
 <p style="text-align: justify;"> 
