--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: home
 	with a highly optimized backend for efficient performance. We welcome contributions from the open source community. </p>
 
 <div class="user-details">
-<h3>Core Features</h3>
-<ul align="left">
+<h3 align="left">Core Features</h3>
+<ul>
 <li>Points, Line and Planes</li>
 <li>Vanishing Points/Directions</li>
 <li>Manhattan/Atlanta World</li>
@@ -20,10 +20,7 @@ layout: home
 <li>Structure and Learning-based Segmentation </li>		
 <li>Scene Reconstruction</li>
 </ul>
-	<h3>Supported compilers</h3>
-<ul>
-<li>GCC 5.X and later on Linux</li>
-</ul>
+
 </div>	
 
 <h2> Publised Systems From the Community </h2>
@@ -35,8 +32,6 @@ layout: home
 	<h3 align="left"> New function: </h3>
         <p> New interface and configs for testing the RGB-IMU system on  OpenLoris Datasets, the code is available here. <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
 	</div>  
-	
-	
 	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
 	{% include clustrmap.html style="js" %}
