--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ layout: home
 <li>Structure and Learning-based Segmentation </li>		
 <li>Scene Reconstruction</li>
 </ul>
-
 </div>	
 
 <h2> Publised Systems From the Community </h2>
@@ -28,9 +27,7 @@ layout: home
 	Based on these excellent works, we modified some engineering parts to test in different environments. </p>
        <h3 align="left">VINS-RGBD </h3> 
 	<div style = "border: border-radius: 1px;">
-	<h3 align="left"> Intro: </h3>
-	<h3 align="left"> New function: </h3>
-        <p> New interface and configs for testing the RGB-IMU system on  OpenLoris Datasets, the code is available here. <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
+        <p> New function: New interface and configs for testing the RGB-IMU system on  OpenLoris Datasets, the code is available here. <a href="https://github.com/LeonGoretzkatju/IndoorSLAM_VINS_RGBD">here</a>. </p>
 	</div>  
 	<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
 	<h3> Visiters </h3>
