[feat]: add GeoGaussian

--- a/project/gs/geogaussian.html
+++ b/project/gs/geogaussian.html
@@ -149,7 +149,7 @@ metric Consistency">
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https:"
+                <a href="https://github.com/yanyan-li/GeoGaussian"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
