--- a/project/gs/geogaussian.html
+++ b/project/gs/geogaussian.html
@@ -192,6 +192,35 @@ metric Consistency">
   </div>
 </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            During the Gaussian Splatting optimization process, 
+            the scene's geometry can gradually deteriorate if its structure is not deliberately 
+            preserved, especially in non-textured regions such as walls, ceilings, and furniture surfaces. 
+            This degradation significantly affects the rendering quality of novel views that 
+            deviate significantly from the viewpoints in the training data. 
+          </p>
+          <p>
+            To mitigate this issue, we propose a novel approach called GeoGaussian. 
+            Based on the smoothly connected areas observed from point clouds, 
+            this method introduces a novel pipeline to initialize thin Gaussians aligned with the surfaces, 
+            where the characteristic can be transferred to new generations through a carefully designed densification strategy. 
+            Finally, the pipeline ensures that the scene's geometry and texture are maintained through constrained optimization processes with explicit geometry constraints. 
+            Benefiting from the proposed architecture, the generative ability of 3D Gaussians is enhanced, especially in structured regions.
+            Our proposed pipeline achieves state-of-the-art performance in novel view synthesis and geometric reconstruction, as evaluated qualitatively and quantitatively on public datasets.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
+
+
 
 
 
