[feat]: add GeoGaussian

--- a/project/gs/geogaussian.html
+++ b/project/gs/geogaussian.html
@@ -43,14 +43,14 @@ metric Consistency">
 </head>
 <body>
 
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
+<!-- <nav class="navbar" role="navigation" aria-label="main navigation"> -->
+  <!-- <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
-  </div>
+  </div> -->
   <!-- <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
       <a class="navbar-item" href="https://keunhong.com">
@@ -81,7 +81,7 @@ metric Consistency">
     </div>
 
   </div> -->
-</nav>
+<!-- </nav> -->
 
 
 <section class="hero">
@@ -183,14 +183,17 @@ metric Consistency">
         <source src="./static/videos/teaser_training.mp4"
                 type="video/mp4"> 
       </video>
-      <p> &#8611; Rendering of views that are novel and challenging </p>
+       <p> &#8611; Rendering of views that are novel and challenging </p>
       <video id="teaser_2" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/teaser_challenging.mp4"
                 type="video/mp4">
-      </video>
+      </video> 
     </div>
   </div>
 </section>
+
+
+
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -219,7 +222,8 @@ metric Consistency">
       </div>
     </div>
     <!--/ Abstract. -->
-
+  </div>
+</section>
 
 
 
