[geogaussian]:update arxiv

--- a/project/gs/geogaussian.html
+++ b/project/gs/geogaussian.html
@@ -129,7 +129,7 @@ metric Consistency">
                 </a>
               </span>
               <span class="link-block">
-                <a href="https:"
+                <a href="http://arxiv.org/abs/2403.11324"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -228,16 +228,15 @@ metric Consistency">
 
 
 
+
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>
-      <!-- @article{2024geogaussian,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},} -->
-  </code></pre>
+    <pre><code>@inproceedings{liopenstructure,
+  author = {Li, Yanyan and Lyu, Chenyu and Di, Yan and Zhai, Guangyao and Lee, Gim Hee and Tombari, Federico},
+  title = {GeoGaussian: Geometry-aware Gaussian Splatting for Scene Rendering},
+  year = {2024},
+  booktitle = {arXiv}}</code></pre>
   <h2 class="title">Reference</h2>
   <pre>
   [3DGS]Kerbl, B., Kopanas, G., Leimkühler, T., & Drettakis, G. (2023). 
