--- a/project/gs/smilesplat.html
+++ b/project/gs/smilesplat.html
@@ -95,10 +95,10 @@
             <span class="author-block">
               <a href="https://">Yixin Fang</a>,</span>
             <span class="author-block">
-              <a href="https://federicotombari.github.io/">Federico Tombari</a>
+              <a href="https://federicotombari.github.io/">Federico Tombari</a>,
             </span>
             <span class="author-block">
-              <a href="https://www.comp.nus.edu.sg/~leegh/">Gim Hee Lee</a>,
+              <a href="https://www.comp.nus.edu.sg/~leegh/">Gim Hee Lee</a>
             </span>
           </div>
 
@@ -112,7 +112,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="http://arxiv.org/abs/2403.11324"
+                <a href="https://arxiv.org/pdf/2411.18072"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -122,7 +122,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/yanyan-li/GeoGaussian"
+                <a href="https://github.com/yanyan-li/SmileSplat"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -151,16 +151,16 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <p> &#8611; Rendering of views that have already been seen </p>
+<!--       <p> &#8611; Rendering of views that have already been seen </p>
       <video id="teaser_1" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/teaser_training.mp4"
                 type="video/mp4"> 
-      </video>
-       <p> &#8611; Rendering of views that are novel and challenging </p>
+      </video> -->
+<!--        <p> &#8611; Rendering of views that are novel and challenging </p>
       <video id="teaser_2" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/teaser_challenging_highlight.mp4"
                 type="video/mp4">
-      </video> 
+      </video>  -->
     </div>
   </div>
 </section>
@@ -176,20 +176,15 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            During the Gaussian Splatting optimization process, 
-            the scene's geometry can gradually deteriorate if its structure is not deliberately 
-            preserved, especially in non-textured regions such as walls, ceilings, and furniture surfaces. 
-            This degradation significantly affects the rendering quality of novel views that 
-            deviate significantly from the viewpoints in the training data. 
+            Sparse Multi-view Images can be Learned to predict explicit radiance fields via Generalizable Gaussian Splatting approaches, which can achieve wider application prospects in real-life when ground-truth camera parameters are not required as inputs. 
           </p>
           <p>
-            To mitigate this issue, we propose a novel approach called GeoGaussian. 
-            Based on the smoothly connected areas observed from point clouds, 
-            this method introduces a novel pipeline to initialize thin Gaussians aligned with the surfaces, 
-            where the characteristic can be transferred to new generations through a carefully designed densification strategy. 
-            Finally, the pipeline ensures that the scene's geometry and texture are maintained through constrained optimization processes with explicit geometry constraints. 
-            Benefiting from the proposed architecture, the generative ability of 3D Gaussians is enhanced, especially in structured regions.
-            Our proposed pipeline achieves state-of-the-art performance in novel view synthesis and geometric reconstruction, as evaluated qualitatively and quantitatively on public datasets.
+            In this paper, a novel generalizable
+Gaussian Splatting method, SmileSplat, is proposed to reconstruct pixel-aligned Gaussian surfels for diverse scenarios only requiring unconstrained sparse multi-view images.
+First, Gaussian surfels are predicted based on the multihead Gaussian regression decoder, which can are represented with less degree-of-freedom but have better multiview consistency. Furthermore, the normal vectors of Gaussian surfel are enhanced based on high-quality of normal priors. Second, the Gaussians and camera parameters (both extrinsic and intrinsic) are optimized to obtain
+high-quality Gaussian radiance fields for novel view synthesis tasks based on the proposed Bundle-Adjusting Gaussian Splatting module. Extensive experiments on novel
+view rendering and depth map prediction tasks are conducted on public datasets, demonstrating that the proposed
+method achieves state-of-the-art performance in various 3D vision tasks. 
           </p>
         </div>
       </div>
@@ -202,7 +197,7 @@
 
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{liopenstructure,
@@ -218,7 +213,7 @@
           Lightgaussian: Unbounded 3d gaussian compression with 15x reduction and 200+ fps. arXiv preprint arXiv:2311.17245.</pre>  
   </div>
 </section>
-
+ -->
 
 <footer class="footer">
   <div class="container">
