--- a/project/gs/smilesplat.html
+++ b/project/gs/smilesplat.html
@@ -95,10 +95,10 @@
             <span class="author-block">
               <a href="https://">Yixin Fang</a>,</span>
             <span class="author-block">
-              <a href="https://federicotombari.github.io/">Federico Tombari</a>
+              <a href="https://federicotombari.github.io/">Federico Tombari</a>,
             </span>
             <span class="author-block">
-              <a href="https://www.comp.nus.edu.sg/~leegh/">Gim Hee Lee</a>,
+              <a href="https://www.comp.nus.edu.sg/~leegh/">Gim Hee Lee</a>
             </span>
           </div>
 
