--- a/project/gs/smilesplat.html
+++ b/project/gs/smilesplat.html
@@ -168,9 +168,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+        <span class="dnerf">SmileSplat</span> turns two sparse views to a Gaussian radiance fields.
       </h2>
     </div>
   </div>
