--- a/project/gs/smilesplat.html
+++ b/project/gs/smilesplat.html
@@ -151,6 +151,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <div class="part1-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/images/png_595_post_3.mp4"
                 type="video/mp4">
@@ -167,8 +168,27 @@
         <source src="./static/images/png_605_post_3.mp4"
                 type="video/mp4">
       </video>
+      </div>
+      <div class="part2-body">
+      <video id="teaser" autoplay muted loop playsinline height="100%">
+        <source src="./static/images/png_25_post_3.mp4"
+                type="video/mp4">
+      </video>
+      <video id="teaser" autoplay muted loop playsinline height="100%">
+        <source src="./static/images/png_355_post_3.mp4"
+                type="video/mp4">
+      </video>
+      <video id="teaser" autoplay muted loop playsinline height="100%">
+        <source src="./static/images/png_300_post_3.mp4"
+                type="video/mp4">
+      </video>
+      <video id="teaser" autoplay muted loop playsinline height="100%">
+        <source src="./static/images/png_250_post_3.mp4"
+                type="video/mp4">
+      </video>
+      </div>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">SmileSplat</span> turns two sparse views to a Gaussian radiance fields.
+        <span class="dnerf">SmileSplat</span> turns two sparse views to Gaussian radiance fields.
       </h2>
     </div>
   </div>
