--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -17,7 +17,8 @@
     content="4dgs ">
   <meta name="keywords" content="Instantsplat, Gaussian Splatting, Gaussian, LightGaussian">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>4D Gaussian Splatting SLAM</title>
+  <title>Robust Gaussian Splatting SLAM by Leveraging Loop Closure</title>
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/xxxxx"></script>
@@ -60,20 +61,22 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title"><span
-                style="color: #4c74af ;font-weight: bolder;"> 4D Gaussian Splatting SLAM</h1>
+                style="color: #4c74af ;font-weight: bolder;"> Robust Gaussian Splatting SLAM by Leveraging Loop Closure</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="">Yanyan Li</a>,</span>
+                <a href="">Zunjie Zhu</a>,</span>
               <span class="author-block">                
                 <a href="">Youxu Fang</a> ,</span>
               <span class="author-block">
-                <a href="">Zunjie Zhu</a> ,</span>
+                <a href="">Xin Li</a> ,</span>
               <span class="author-block">
-                <a href="">Kunyi Li</a> ,</span>
+                <a href="">Chenggang Yan</a> ,</span>
               <span class="author-block">
-                <a href=""> Yong Ding</a>,</span>
+                <a href=""> Feng Xu</a>,</span>
               <span class="author-block">
-                <a href="">Federico Tombari</a></span>
+                <a href="">Chau Yuen</a></span>
+               <span class="author-block">
+                <a href="">Yanyan Li</a></span>  
           </div>
 
           <!-- affiliations -->
