--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -91,7 +91,7 @@
               </a>
               </span>
               <span class="link-block">
-              <a href="https://arxiv.org/pdf/2503.16710"
+              <a href="https://arxiv.org/pdf/2409.20111"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -110,12 +110,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/yanyan-li/4DGS-SLAM"
+                <a href="https://yanyan-li.github.io/project/gs/gaussianloopclosure"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code coming soon</span>
                 </a>
               </span>
             </div>
