--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -231,7 +231,7 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
-          <h2 class="title is-3">More Qualitative Results of 4DGS-SLAM</h2>
+          <h2 class="title is-3">More Qualitative Results</h2>
          
   <!-- <section class="section">
     <div class="container is-max-desktop ">
