--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -238,9 +238,13 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
       <div class=" has-text-centered">
         <h2 class="title is-3">Visual Comparisons</h2> -->
         <div class="content has-text-justified">
-          <p>
-
-          </p>
+          <img src="static/images/loop_image1.png" 
+                  alt="Loop Closure Architecture Demo" 
+                  style="width: 100%;" loading="lazy">
+          <hr style="margin: 2rem 0;">        
+          <img src="static/images/loop_image2.png" 
+                  alt="Loop Closure Architecture Demo" 
+                  style="width: 100%;" loading="lazy">        
         </div>
      
 
@@ -269,7 +273,7 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
   title={Robust Gaussian Splatting SLAM by Leveraging Loop Closure},
   author={Zhu, Zunjie and Fang, Youxu and Li, Xin and Yan, Chengang and Xu, Feng and Yuen, Chau and Li, Yanyan},
   journal={arXiv preprint arXiv:2409.20111},
-  year={2024} 
+  year={2025} 
 }</code></pre>
     </div>
   </section>
