--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -231,7 +231,7 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
-          <h2 class="title is-3">More Qualitative Results</h2>
+          <h2 class="title is-3">More Qualitative Results on Public Datasets</h2>
          
   <!-- <section class="section">
     <div class="container is-max-desktop ">
@@ -244,7 +244,8 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
           <hr style="margin: 2rem 0;">        
           <img src="static/images/loop_image2.png" 
                   alt="Loop Closure Architecture Demo" 
-                  style="width: 100%;" loading="lazy">        
+                  style="width: 100%;" loading="lazy">   
+           <hr style="margin: 2rem 0;">              
         </div>
      
 
