--- a/project/gs/gaussianloopclosure.html
+++ b/project/gs/gaussianloopclosure.html
@@ -273,7 +273,7 @@ Furthermore, a loop closure optimization approach is proposed to remove camera p
       <pre><code>@misc{zhu2024robust,
   title={Robust Gaussian Splatting SLAM by Leveraging Loop Closure},
   author={Zhu, Zunjie and Fang, Youxu and Li, Xin and Yan, Chengang and Xu, Feng and Yuen, Chau and Li, Yanyan},
-  journal={arXiv preprint arXiv:2409.20111},
+  journal={arXiv preprint},
   year={2025} 
 }</code></pre>
     </div>
