--- a/project/vlx/active3d.html
+++ b/project/vlx/active3d.html
@@ -274,11 +274,9 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@misc{li2025active3d,
   title={Active3D: Active High-Fidelity 3D Reconstruction via Hierarchical Uncertainty Quantification}, 
-  author={Yan Li and Yingzhao and Gim Hee Lee},
-  year={2025},
-  eprint={2503.16710},
-  archivePrefix={arXiv},
-  primaryClass={cs.CV},
+  author={Yan Li and Yingzhao Li and Gim Hee Lee},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  year={2026},
 }</code></pre>
     </div>
   </section>
