--- a/project/vlx/active3d.html
+++ b/project/vlx/active3d.html
@@ -174,7 +174,7 @@
           </video>
         </div>
         <p class="caption has-text-centered">
-          Actively high-fidelity reconstructing in MP3D sequences. 
+          Actively high-fidelity reconstruction in MP3D sequences. 
         </P>
     </div>
   </div>
